# railways_resilience

./: .gitignore  INSTALL.md  NOTICE  README.md  config.py  pyproject.toml  setup.py  setup.sh
data/: belgium.sqlite
data/pkl/: belgium_routesCleaned.pkl  gtc_data_ireland.pkl  ireland.pkl  ireland_P.pkl  ireland_cleaned.pkl  nl_P.pkl  nl_merged.pkl  subgraphs_by_size.pkl
data/results/: demo.csv  run_1.csv  subgraph_10.csv  test.csv
gtfs_railways/: setup.py
gtfs_railways/gtfs_railways/: w2.py
notebooks/: Efficiency (Batched Subgraphs).ipynb  test_marco.ipynb
notebooks/Marco/: fitting_patterns.ipynb  fitting_test.ipynb
notebooks/functions/: plot.py  w1.py  workflows.py
pkl/10/: graph_0.pkl  graph_1.pkl  graph_2.pkl  graph_3.pkl  graph_4.pkl  graph_6.pkl  graph_7.pkl  graph_8.pkl
scripts/: betweennessUnweighted.py  betweennessUnweightedLeast.py  betweennessWeighted.py  betweennessWeightedLeast.py  fullGraph.py  fullGraphMultiple.py  subGraph.py  targetedRemoval.py  targetedRemovalEdges.py  targetedRemovalLeast.py  topHubRemoval.py
src/: config.py
trash/: environment.yml  pyproject.toml  setup.py  test_marco.ipynb
trash/src/: config.py
trash/src/functions/: utils.py
trash/src/railways_resilience/gtfspy-master/gtfspy/routing/: label.c
trash/src/railways_resilience/notebooks/: Efficiency (Batched Subgraphs).ipynb
trash/src/railways_resilience/osmread-master/: .gitignore
trash/src/railways_resilience/pkl/: belgium_P.pkl  belgium_nodesCleaned.pkl  chicago.pkl  gtc_data_belgium.pkl  gtc_data_netherlands.pkl  nl_merged.pkl
utils/: imports.py
(+437 files in other folders)
