[project]
name = "railways_resilience"
version = "0.1.0"
description = ""
authors = [
    {name = "Praneesh Sharma", email = "praneesh.sharma@dtsc.be"},
    {name = "Renzo Massobrio"}, 
    {name = "Marco Di Gennaro", email = "marco.digennaro@dtsc.be"}
]
readme = "README.md"
requires-python = ">=3.10"
[tool.poetry]
packages = [
    {include = "railways_resilience", from = "src"}
    ]

[tool.poetry.dependencies]
matplotlib = "^3.10.3"
notebook = "^7.4.3"
pandas = "^2.3.0"
