[project]
name = "railways_resilience"
version = "0.1.0"
description = ""
authors = [
    {name = "Praneesh Sharma", email = "praneesh.sharma@dtsc.be"},
    {name = "Renzo Massobrio"}, 
    {name = "Marco Di Gennaro", email = "marco.digennaro@dtsc.be"}
]
readme = "README.md"
requires-python = "<3.8"
[tool.poetry]
packages = [
    {include = "railways_resilience", from = "src"}
    ]

